# static-api-builder

./: README.md  generate_aws_idx.py  pyproject.toml
.github/workflows/: build.yml
src/apibuilder/: aws.py  config.py
